--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
 
     <h1>Test</h1>
+
+
+<form>
+    <input type="text" name="address[address1]" placeholder="Address Line 1" required>
+    <input type="text" name="address[city]" placeholder="City" required>
+    <input type="text" name="address[zip]" placeholder="ZIP Code" required>
+    <button type="submit">Submit</button>
+  </form>
+  
     <script src="script.js"></script>
 </body>
 </html>
