--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <button type="submit">Submit</button>
   </form>
   
-    <script src="script.js"></script>
+    <script src="script3.js"></script>
 </body>
 </html>
